This issue tracker has been migrated to GitHub, and is currently read-only.
For more information, see the GitHub FAQs in the Python's Developer Guide.

classification
Title: Modules/getpath.c should not use hardcoded buffer sizes (MAXPATHLEN)
Type: Stage: resolved
Components: Interpreter Core Versions: Python 3.8
process
Status: closed Resolution: fixed
Dependencies: Superseder:
Assigned To: Nosy List: vstinner
Priority: normal Keywords: patch

Created on 2019-03-18 16:46 by vstinner, last changed 2022-04-11 14:59 by admin. This issue is now closed.

Pull Requests
URL Status Linked Edit
PR 12421 merged vstinner, 2019-03-18 22:28
PR 12423 merged vstinner, 2019-03-19 00:47
Messages (5)
msg338255 - (view) Author: STINNER Victor (vstinner) * (Python committer) Date: 2019-03-18 16:46
I'm working on a change to avoid hardcoded buffer sizes (MAXPATHLEN) in Modules/getpath.c. This issue is a place holder to discuss it.
msg338256 - (view) Author: STINNER Victor (vstinner) * (Python committer) Date: 2019-03-18 16:47
New changeset 1be0d1135f5627d0525eab635cf2da441d9cbc08 by Victor Stinner in branch 'master':
bpo-36352: Clarify fileutils.h documentation (GH-12406)
https://github.com/python/cpython/commit/1be0d1135f5627d0525eab635cf2da441d9cbc08
msg338295 - (view) Author: STINNER Victor (vstinner) * (Python committer) Date: 2019-03-18 22:55
New changeset 7b14f0c02ce9d919c503119db190dbca0e703393 by Victor Stinner in branch 'master':
bpo-36352: Add error handling to getpath.c (GH-12421)
https://github.com/python/cpython/commit/7b14f0c02ce9d919c503119db190dbca0e703393
msg338309 - (view) Author: STINNER Victor (vstinner) * (Python committer) Date: 2019-03-19 01:58
New changeset faddaedd05ca81a9fed3f315e7bc8dcf455824a2 by Victor Stinner in branch 'master':
bpo-36352: Avoid hardcoded MAXPATHLEN size in getpath.c (GH-12423)
https://github.com/python/cpython/commit/faddaedd05ca81a9fed3f315e7bc8dcf455824a2
msg338310 - (view) Author: STINNER Victor (vstinner) * (Python committer) Date: 2019-03-19 01:59
These changes are intrusive. I don't think that it's worth it to backport them to 3.7 (or 2.7). Just don't play with paths close to MAXPATHLEN bytes on Python 2.7 or 3.7 :-) I close the issue.
History
Date User Action Args
2022-04-11 14:59:12adminsetgithub: 80533
2019-03-19 01:59:28vstinnersetstatus: open -> closed
resolution: fixed
messages: + msg338310

stage: patch review -> resolved
2019-03-19 01:58:16vstinnersetmessages: + msg338309
2019-03-19 00:47:28vstinnersetpull_requests: + pull_request12378
2019-03-18 22:55:05vstinnersetmessages: + msg338295
2019-03-18 22:28:22vstinnersetkeywords: + patch
stage: patch review
pull_requests: + pull_request12376
2019-03-18 16:47:34vstinnersetmessages: + msg338256
2019-03-18 16:46:40vstinnercreate